first block done

--- a/index.html
+++ b/index.html
@@ -5,18 +5,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Sublight Engines</title>
     <meta name="description" content="">
+
+    <!--FONTS-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="">    
+    <link rel="stylesheet" href="css/main.css">    
 </head>
 <body>    
     <!-- MAIN CONTENT -->
 
+    <!-- Background img -->
+    <div class="topimg">
+        <div class="toTheTop">
+            <p class="p1">Our Mission</p>
+            <p class="p2">Take you to the top</p>
+            <img class= "elevator_button" src="img/elevator_button.svg"/>
+        </div>
+    </div>
+    <!-- Background img -->
+
+    <!-- Navbar -->
+    <div class="rectangle">
+        <div class="box1">
+            <img src="img/logo_sublight.svg"/>
+        </div>
+        <div class="box2">
+            <ul class="navbar">
+                <li>Our Services</li>
+                <li>Our Products</li>
+                <li>About Us</li>
+                <li>Contact Us</li>
+            </ul>
+        </div>
+    </div>
+    <!-- Navbar -->
+
+    <!-- Grey block -->
+    <div class="rectangle2">
+        <p class="p3">One-stop for your elevator needs</p>
+        <p class="p4">One step close to success</p>
+        <img class= "separator" src="img/separator.svg"/>
+    </div>
+    <!-- Grey block -->
+
     <!-- FOOTER -->
     
-    <!-- SCRIPTS -->
-    <script src="" async defer></script>
 </body>
 </html>
