detail on the select tag

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             <label id="phonelabel">Phone number</label>
             <input id="phone" for="phonelabel" placeholder="0(000) 000-0000" type="text">
             <label id="languagelabel">Preferred language</label>
-            <select id="language" for="languagelabel" type="text">
-                <option value="0" style="padding-left: 23px; color: #383838;">Select</option>
+            <select id="language" id="language" for="languagelabel" type="text">
+                <option value="0">Select</option>
                 <option value="1">English</option>
                 <option value="2">French</option>
                 <option value="3">Spanish</option>
