--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
                     <option value="3">Spanish</option>
                 </select>
 
-                <input id="button" type="button" value="Submit">
+                <input id="button" type="button" value="Submit" onclick="Popup()" style="cursor:pointer;">
+                <script>
+                    function Popup() {
+                      alert("The form submission is not yet implemented ! Please comeback later !");
+                    }
+                </script>
             </form>
         </section>
         <!-- Form -->
