--- a/index.html
+++ b/index.html
@@ -71,35 +71,40 @@
             <h2 class="p10">All our products are made with heart and soul</h2>
             <img class= "separator2" src="img/separator2.svg"/>
             <div class="products">
-                <div class="product-box" style="left: 41px;">
+                <div class="product-box" onclick="Download()" style="left: 41px; cursor:pointer;">
                     <div class="product-img" style="background: url(../img/bkg_2-2.png);"></div>
                     <h3 class="p11">Safety</h3>
                     <p class="p12">Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
-                <div class="product-box" style="left: 316px;">
+                <div class="product-box" onclick="Download()" style="left: 316px; cursor:pointer;">
                     <div class="product-img"style="background: url(../img/bkg_2-2-2.png);"></div>
                     <h3 class="p11">Cab</h3>
                     <p class="p12">Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
-                <div class="product-box" style="left: 592px;">
+                <div class="product-box" onclick="Download()" style="left: 592px; cursor:pointer;">
                     <div class="product-img"style="background: url(../img/bkg_2-2-3.png);"></div>
                     <h3 class="p11">Door</h3>
                     <p class="p12">Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
-                <div class="product-box" style="left: 867px;">
+                <div class="product-box" onclick="Download()" style="left: 867px; cursor:pointer;">
                     <div class="product-img"style="background: url(../img/bkg_2-2-4.png);"></div>
                     <h3 class="p11">Mechanics</h3>
                     <p class="p12">Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
-                <div class="product-box" style="left: 1143px;">
+                <div class="product-box" onclick="Download()" style="left: 1143px; cursor:pointer;">
                     <div class="product-img"style="background: url(../img/bkg_2-2-5.png);"></div>
                     <h3 class="p11">Hoistway/Hatch</h3>
                     <p class="p12">Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
             </div>
-            <div class="download_button">
+            <div class="download_button" onclick="Download()" style="cursor:pointer;">
                 <p class="p13">Download our catalog</p>
             </div>
+            <script>
+                function Download() {
+                  alert("Not yet implemented ! Please comeback later !");
+                }
+            </script>
         </section>
         <!-- Products -->
 
