elev button replaced

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <ul class="navlinks">
                         <li><a class="fermer" href="#services">Our Services</a></li>
                         <li><a class="fermer" href="#products">Our Products</a></li>
-                        <li><a class="fermer" href="#aboutus">About Us</a></li>
+                        <li><a class="fermer" href="#about">About Us</a></li>
                         <li><a class="fermer" href="#contactus">Contact Us</a></li>
                     </ul>
                 </div>
@@ -77,7 +77,7 @@
         <!-- Services -->
 
         <!-- About Us -->
-        <section class="aboutus">
+        <section class="aboutus" id="about">
             <div class="sometext">
                 <h1 class="tinyTitle">2022 our secureboards series</h1>
                 <h2 class="bigTitle">The perfection in security</h2>
