--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="same">
                     <div class="diff">
                         <label id="phonelabel">Phone number</label>
-                        <input id="phone" type="tel" for="phonelabel" placeholder="0(000) 000-0000" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                        <input id="phone" type="tel" for="phonelabel" placeholder="123-456-7890" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
                     </div>
                     <div class="diff" id="move">
                         <label id="languagelabel">Preferred language</label>
